--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isabela eu te AMO</title>
-    <link rel="stylesheet" href="sitetop.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>ISABELA EU TE AMO</h1>
